Revert "fix text spacing" revert last commit This reverts commit 6897c936dcf648793e85956aa0eeaec9d35d5ba5.

--- a/A1/style.css
+++ b/A1/style.css
@@ -247,7 +247,7 @@ form {
     height: 51px;
     align-items: center;
     text-align: center;
-    margin-left: 115.2px;
+    margin-left: 95.2px;
 }
 
 .btn {
@@ -338,7 +338,6 @@ label.consent {
     font-weight: 400;
     text-align: left;
     justify-content: left;
-    margin-left: 4px;
 }
 
 @media (max-width: 900px){
